@@ -4,9 +4,11 @@ import com.fasterxml.jackson.core.JsonParser;
 import com.fasterxml.jackson.core.JsonToken;
 import com.fasterxml.jackson.databind.DeserializationContext;
 import com.fasterxml.jackson.databind.JsonDeserializer;
+import com.fasterxml.jackson.databind.JsonNode;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import lombok.extern.slf4j.Slf4j;
 
@@ -19,19 +21,16 @@ public class StringToListDeserializer extends JsonDeserializer<List<String>> {
 
     @Override
     public List<String> deserialize(JsonParser parser, DeserializationContext ctxt) throws IOException {
-        JsonToken token = parser.getCurrentToken();
-
-        return switch (token) {
+        return switch (parser.getCurrentToken()) {
             case START_ARRAY -> {
                 List<String> result = new ArrayList<>();
-                JsonToken nextToken = parser.nextToken();
-                while (nextToken != JsonToken.END_ARRAY) {
-                    if (nextToken == JsonToken.VALUE_STRING) {
-                        result.add(parser.getText());
-                    } else {
-                        result.add(parser.getValueAsString());
-                    }
-                    nextToken = parser.nextToken();
+                while (parser.nextToken() != JsonToken.END_ARRAY) {
+                    result.add(
+                            switch (parser.getCurrentToken()) {
+                                case VALUE_STRING -> parser.getText();
+                                case VALUE_NULL -> null;
+                                default -> parser.getValueAsString();
+                            });
                 }
                 yield result;
             }
@@ -40,16 +39,29 @@ public class StringToListDeserializer extends JsonDeserializer<List<String>> {
                 if (text == null || text.trim().isEmpty()) {
                     yield new ArrayList<>();
                 }
-                String[] items = text.split("[,;]");
-                yield Arrays.stream(items)
+                yield Arrays.stream(text.split("[,;]"))
                         .map(String::trim)
                         .filter(s -> !s.isEmpty())
-                        .toList();
+                        .toList(); // <-- updated here
             }
             case VALUE_NULL -> getNullValue(ctxt);
+            case START_OBJECT -> {
+                JsonNode node = parser.readValueAsTree();
+                StringBuilder sb = new StringBuilder("{");
+                node.fields().forEachRemaining(entry -> {
+                    if (sb.length() > 1) {
+                        sb.append(", ");
+                    }
+                    sb.append(entry.getKey())
+                            .append("=")
+                            .append(entry.getValue().asText());
+                });
+                sb.append("}");
+                yield Collections.singletonList(sb.toString());
+            }
             default -> {
-                log.warn("Unexpected token type for companion_plants: {}", token);
-                yield List.of(parser.getValueAsString());
+                String value = parser.getValueAsString();
+                yield value != null ? Collections.singletonList(value) : getNullValue(ctxt);
             }
         };
     }
